--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,25 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": "@mate-academy/eslint-config-react",
+    // "env": {
+    //     "browser": true,
+    //     "es2021": true
+    // },
+    "extends": ["@mate-academy/eslint-config-react-typescript", "plugin:cypress/recommended"],
     "overrides": [
     ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react"
-    ],
+    // "parserOptions": {
+    //     "ecmaVersion": "latest",
+    //     "sourceType": "module"
+    // },
+    // "plugins": [
+    //     "react"
+    // ],
     "rules": {
-
-    }
+        "max-len": ["error", {
+          "ignoreTemplateLiterals": true,
+          "ignoreComments": true
+        }],
+        "jsx-a11y/label-has-associated-control": ["error", {
+          "assert": "either"
+        }]
+      }
 }
