--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "homepage": "https://fe-sep22-FixMePlease.github.io/product-catalog-frontend",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -11,6 +12,7 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "babel-eslint": "^10.1.0",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -44,11 +46,15 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.20.7",
+    "@babel/eslint-parser": "^7.19.1",
     "@mate-academy/eslint-config": "0.0.20",
     "@mate-academy/eslint-config-react": "0.0.9",
+    "@mate-academy/eslint-config-react-typescript": "^1.0.11",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "eslint": "^8.31.0",
     "eslint-config-standard-with-typescript": "^26.0.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-promise": "^6.1.1",
