--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,18 @@
 {
-    // "env": {
-    //     "browser": true,
-    //     "es2021": true
-    // },
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
     "extends": ["@mate-academy/eslint-config-react-typescript", "plugin:cypress/recommended"],
     "overrides": [
     ],
-    // "parserOptions": {
-    //     "ecmaVersion": "latest",
-    //     "sourceType": "module"
-    // },
-    // "plugins": [
-    //     "react"
-    // ],
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": [
+        "react"
+    ],
     "rules": {
         "max-len": ["error", {
           "ignoreTemplateLiterals": true,
