--- a/package.json
+++ b/package.json
@@ -25,7 +25,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "mate-scripts test -l",
+    "lint-js": "mate-scripts lint -j",
+    "lint-css": "mate-scripts lint -s",
+    "lint": "npm run lint-js && npm run lint-css",
+    "update": "mate-scripts update",
+    
   },
   "eslintConfig": {
     "extends": [
