--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "product-catalog-frontend",
-  "homepage": "https://fe-sep22-FixMePlease.github.io/product-catalog-frontend",
+  "name": "frontend",
+  "homepage": "https://fe-sep22-fulfilled.github.io/frontend/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -24,7 +24,21 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --write . --ignore-path .gitignore",
+    "lint": "eslint . --ignore-path .gitignore",
+    "fix-style": "npm run format && npm run lint -- --fix",
+    "prepare": "husky install"
+  },
+  "devDependencies": {
+    "@mate-academy/eslint-config-react-typescript": "^1.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "eslint": "^8.31.0",
+    "eslint-plugin-react": "^7.31.11",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.1"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "lint-staged": {
+    "*.tsx": "npm run fix-style"
   }
 }
