attempt to fix linter underscoring issue

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "eject": "react-scripts eject",
     "format": "prettier --write . --ignore-path .gitignore",
     "lint": "eslint . --ignore-path .gitignore",
-    "fix-style": "npm run format && npm run lint -- --fix",
+    "fix-style": "npm run format && npm run lint",
     "prepare": "husky install"
   },
   "devDependencies": {
