--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-svg": "^15.1.17",
+    "swiper": "^8.4.6",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
